2006-09-26 Jacob Ilsø Christensen  <jacobilsoe@gmail.com>

	* src/Core.mds: Updated.

2006-09-19 Jacob Ilsø Christensen  <jacobilsoe@gmail.com>

	* src/Tools/Tools.mds:
	* src/Tools/mdrun/mdrun.mdp:
	Updated.

	* src/Tools/mdrun: Added svn:ignore for mdrun.pidb

2006-03-16  Jacob Ilsø Christensen  <jacobilsoe@gmail.com>

	* src/Makefile.am: Changed build order.

2005-01-13  Christian Hergert <chris@mosaix.net>

	* AUTHORS: Added christian and ankit

2004-12016  David Dollar  <ddollar@grepninja.org>

	* configure.in: Remove the second gtk-sharp prefix check that was
	breaking people with gtk-sharp 1.0 and 2.0 installs in different
	prefixes.

2004-11-12  Todd Berman  <tberman@off.net>

	* configure.in: Require 0.6.99 (HEAD SVN) gtksourceview-sharp.

2004-11-11  Todd Berman  <tberman@off.net>

	* configure.in: Check for OEE Mono.Posix

2004-11-05  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* *: Large changeset, adds project management, compilation, and
	rudimentary code completion support for vb.net

2004-10-27  Todd Berman  <tberman@off.net>

	* configure.in: Make sure a valid gnome prefix is returned, error out
	otherwise.

2004-10-27  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* monodevelop.xml: fix vb mime entry.

2004-10-21  John Luke  <john.luke@gmail.com>

	* *Makefile.am: remove CSC= in individual Makefile.am's (make CSC='mcs -g' for debug)
	add $(DLL).mdb to CLEANFILES

2004-10-17  John Luke  <john.luke@gmail.com>

	* configure.in: echo $CSC at the end for the prefix impaired (like me)

2004-10-15  Fawad Halim <fawad@fawad.net>

	* build/AddIns/AddIns/BackendBindings/templates/Makefile.am: Add missing NemerleGtkSharpWindow.xft.xml reference.
	* src/AddIns/DisplayBindings/SourceEditor/Gui/SourceEditorDisplayBinding.cs:
	* src/AddIns/BackendBindings/CSharpBinding/CSharpBindingCompilerManager.cs:
	* build/AddIns/AddIns/BackendBindings/BackendBindings.addin.xml: